
[TestLexLifetimeTokens/SingleLifetime - 1]
[]*parser.Token{
    &parser.Token{
        Span: 0-2,
        Type: 43,
        Value: "a",
    },
}
---

[TestLexLifetimeTokens/MultipleLifetimes - 1]
[]*parser.Token{
    &parser.Token{
        Span: 0-2,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 3-10,
        Type: 43,
        Value: "static",
    },
    &parser.Token{
        Span: 11-14,
        Type: 43,
        Value: "b1",
    },
}
---

[TestLexLifetimeTokens/LifetimeInTypeParameterList - 1]
[]*parser.Token{
    &parser.Token{
        Span: 0-1,
        Type: 52,
        Value: "<",
    },
    &parser.Token{
        Span: 1-3,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 3-4,
        Type: 17,
        Value: ",",
    },
    &parser.Token{
        Span: 5-7,
        Type: 43,
        Value: "b",
    },
    &parser.Token{
        Span: 7-8,
        Type: 17,
        Value: ",",
    },
    &parser.Token{
        Span: 9-10,
        Type: 41,
        Value: "T",
    },
    &parser.Token{
        Span: 10-11,
        Type: 39,
        Value: ">",
    },
}
---

[TestLexLifetimeTokens/LifetimeAdjacentToType - 1]
[]*parser.Token{
    &parser.Token{
        Span: 0-3,
        Type: 58,
        Value: "mut",
    },
    &parser.Token{
        Span: 4-6,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 7-12,
        Type: 41,
        Value: "Point",
    },
}
---

[TestLexLifetimeTokens/LifetimeUnionInsideParens - 1]
[]*parser.Token{
    &parser.Token{
        Span: 0-1,
        Type: 67,
        Value: "(",
    },
    &parser.Token{
        Span: 1-3,
        Type: 43,
        Value: "a",
    },
    &parser.Token{
        Span: 4-5,
        Type: 68,
        Value: "|",
    },
    &parser.Token{
        Span: 6-8,
        Type: 43,
        Value: "b",
    },
    &parser.Token{
        Span: 8-9,
        Type: 15,
        Value: ")",
    },
}
---

[TestParseLifetimeAnnotations/FnTypeAnnLifetimeParams - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "f",
            span: 4-5,
        },
        TypeAnn: &ast.FuncTypeAnn{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 10-12,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 14-15,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 20-25,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 17-19,
                        },
                        span: 20-25,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 33-38,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: 30-32,
                },
                span: 33-38,
            },
            span: 7-38,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 41-44,
        },
        span: 0-44,
    },
    span: 0-44,
}
---

[TestParseLifetimeAnnotations/FnLifetimeAndTypeParams - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "identity",
            span: 3-11,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 12-14,
                },
            },
            TypeParams: []*ast.TypeParam{
                &ast.TypeParam{
                    Name: "T",
                    span: 16-17,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 19-20,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 29-30,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 26-28,
                            },
                            span: 29-30,
                        },
                        span: 29-30,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 42-43,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 39-41,
                    },
                    span: 42-43,
                },
                span: 42-43,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 53-54,
                    },
                    span: 46-54,
                },
            },
            Span: 44-56,
        },
        span: 0-56,
    },
    span: 0-56,
}
---

[TestParseLifetimeAnnotations/FnImmutableLifetimeOnRef - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "ref",
            span: 3-6,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 7-9,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 11-12,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 17-22,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 14-16,
                        },
                        span: 17-22,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 30-35,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: 27-29,
                },
                span: 30-35,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 45-46,
                    },
                    span: 38-46,
                },
            },
            Span: 36-48,
        },
        span: 0-48,
    },
    span: 0-48,
}
---

[TestParseLifetimeAnnotations/FnTwoLifetimeParams - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "first",
            span: 3-8,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 9-11,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    span: 13-15,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 17-18,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 27-32,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 24-26,
                            },
                            span: 27-32,
                        },
                        span: 27-32,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "b",
                        span: 34-35,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 44-49,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "b",
                                span: 41-43,
                            },
                            span: 44-49,
                        },
                        span: 44-49,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 61-66,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 58-60,
                    },
                    span: 61-66,
                },
                span: 61-66,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "a",
                        span: 76-77,
                    },
                    span: 69-77,
                },
            },
            Span: 67-79,
        },
        span: 0-79,
    },
    span: 0-79,
}
---

[TestParseLifetimeAnnotations/FnSingleLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "identity",
            span: 3-11,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 12-14,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 16-17,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 26-31,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 23-25,
                            },
                            span: 26-31,
                        },
                        span: 26-31,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 43-48,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 40-42,
                    },
                    span: 43-48,
                },
                span: 43-48,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 58-59,
                    },
                    span: 51-59,
                },
            },
            Span: 49-61,
        },
        span: 0-61,
    },
    span: 0-61,
}
---

[TestParseLifetimeAnnotations/InterfaceMethodLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Borrower",
            span: 10-18,
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.MethodTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "borrow",
                        span: 21-27,
                    },
                    Fn: &ast.FuncTypeAnn{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 28-30,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 38-39,
                                },
                                TypeAnn: &ast.TypeRefTypeAnn{
                                    Name: &ast.Ident{
                                        Name: "Point",
                                        span: 44-49,
                                    },
                                    Lifetime: &ast.LifetimeAnn{
                                        Name: "a",
                                        span: 41-43,
                                    },
                                    span: 44-49,
                                },
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 57-62,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 54-56,
                            },
                            span: 57-62,
                        },
                        span: 31-62,
                    },
                    Receiver: &ast.MethodReceiver{
                        Span_: 32-36,
                    },
                },
            },
            span: 19-64,
        },
        span: 0-64,
    },
    span: 0-64,
}
---

[TestParseLifetimeAnnotations/ClassMethodLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Box",
            span: 6-9,
        },
        Body: []ast.ClassElem{
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name: "borrow",
                    span: 12-18,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 19-21,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 29-30,
                                },
                                TypeAnn: &ast.TypeRefTypeAnn{
                                    Name: &ast.Ident{
                                        Name: "Point",
                                        span: 35-40,
                                    },
                                    Lifetime: &ast.LifetimeAnn{
                                        Name: "a",
                                        span: 32-34,
                                    },
                                    span: 35-40,
                                },
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 48-53,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 45-47,
                            },
                            span: 48-53,
                        },
                    },
                    Body: &ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ReturnStmt{
                                Expr: &ast.IdentExpr{
                                    Name: "p",
                                    span: 63-64,
                                },
                                span: 56-64,
                            },
                        },
                        Span: 54-66,
                    },
                    span: 12-66,
                },
                Receiver: &ast.MethodReceiver{
                    Span_: 23-27,
                },
                Span_: 12-66,
            },
        },
        span: 0-68,
    },
    span: 0-68,
}
---

[TestParseLifetimeAnnotations/ClassWithLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Container",
            span: 6-15,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 16-18,
            },
        },
        Body: []ast.ClassElem{
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name: "p",
                    span: 22-23,
                },
                Type: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 28-33,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 25-27,
                    },
                    span: 28-33,
                },
                Span_: 22-33,
            },
        },
        span: 0-35,
    },
    span: 0-35,
}
---

[TestParseLifetimeAnnotations/InterfaceWithLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Holder",
            span: 10-16,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 17-19,
            },
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.PropertyTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "p",
                        span: 23-24,
                    },
                    Value: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 29-34,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 26-28,
                        },
                        span: 29-34,
                    },
                },
            },
            span: 21-36,
        },
        span: 0-36,
    },
    span: 0-36,
}
---

[TestParseLifetimeAnnotations/TypeRefStaticLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 4-5,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Container",
                span: 7-16,
            },
            LifetimeArgs: []ast.LifetimeAnnNode{
                &ast.LifetimeAnn{
                    Name: "static",
                    span: 17-24,
                },
            },
            span: 7-25,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 28-31,
        },
        span: 0-31,
    },
    span: 0-31,
}
---

[TestParseLifetimeAnnotations/ClassImplementsLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Forwarder",
            span: 6-15,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 16-18,
            },
        },
        Implements: []*ast.TypeRefTypeAnn{
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "View",
                    span: 31-35,
                },
                LifetimeArgs: []ast.LifetimeAnnNode{
                    &ast.LifetimeAnn{
                        Name: "a",
                        span: 36-38,
                    },
                },
                span: 31-39,
            },
        },
        Body: []ast.ClassElem{
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name: "value",
                    span: 42-47,
                },
                Type: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 52-57,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 49-51,
                    },
                    span: 52-57,
                },
                Span_: 42-57,
            },
        },
        span: 0-59,
    },
    span: 0-59,
}
---

[TestParseLifetimeAnnotations/TypeRefBareLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 4-5,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "View",
                span: 7-11,
            },
            LifetimeArgs: []ast.LifetimeAnnNode{
                &ast.LifetimeAnn{
                    Name: "a",
                    span: 12-14,
                },
            },
            span: 7-15,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 18-21,
        },
        span: 0-21,
    },
    span: 0-21,
}
---

[TestParseLifetimeAnnotations/TypeRefMixedLifetimeAndTypeArgs - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 4-5,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Pair",
                span: 7-11,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 16-17,
                    },
                    span: 16-17,
                },
            },
            LifetimeArgs: []ast.LifetimeAnnNode{
                &ast.LifetimeAnn{
                    Name: "a",
                    span: 12-14,
                },
            },
            span: 7-18,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 21-24,
        },
        span: 0-24,
    },
    span: 0-24,
}
---

[TestParseLifetimeAnnotations/FnReturnsTypeRefWithLifetimeArg - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "borrow",
            span: 3-9,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 10-12,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "c",
                        span: 14-15,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Container",
                            span: 17-26,
                        },
                        LifetimeArgs: []ast.LifetimeAnnNode{
                            &ast.LifetimeAnn{
                                Name: "a",
                                span: 27-29,
                            },
                        },
                        span: 17-30,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 38-43,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: 35-37,
                },
                span: 38-43,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.MemberExpr{
                        Object: &ast.IdentExpr{
                            Name: "c",
                            span: 53-54,
                        },
                        Prop: &ast.Ident{
                            Name: "p",
                            span: 55-56,
                        },
                        span: 53-56,
                    },
                    span: 46-56,
                },
            },
            Span: 44-58,
        },
        span: 0-58,
    },
    span: 0-58,
}
---

[TestParseLifetimeAnnotations/ClassMethodSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "View",
            span: 6-10,
        },
        Body: []ast.ClassElem{
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name: "peek",
                    span: 13-17,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 18-20,
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 37-42,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 34-36,
                            },
                            span: 37-42,
                        },
                    },
                    Body: &ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ReturnStmt{
                                Expr: &ast.MemberExpr{
                                    Object: &ast.IdentExpr{
                                        Name: "self",
                                        span: 52-56,
                                    },
                                    Prop: &ast.Ident{
                                        Name: "p",
                                        span: 57-58,
                                    },
                                    span: 52-58,
                                },
                                span: 45-58,
                            },
                        },
                        Span: 43-60,
                    },
                    span: 13-60,
                },
                Receiver: &ast.MethodReceiver{
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 22-24,
                    },
                    Span_: 22-29,
                },
                Span_: 13-60,
            },
        },
        span: 0-62,
    },
    span: 0-62,
}
---

[TestParseLifetimeAnnotations/InterfaceMethodSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Viewer",
            span: 10-16,
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.MethodTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "peek",
                        span: 19-23,
                    },
                    Fn: &ast.FuncTypeAnn{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 24-26,
                            },
                        },
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 43-48,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 40-42,
                            },
                            span: 43-48,
                        },
                        span: 27-48,
                    },
                    Receiver: &ast.MethodReceiver{
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 28-30,
                        },
                        Span_: 28-35,
                    },
                },
            },
            span: 17-50,
        },
        span: 0-50,
    },
    span: 0-50,
}
---

[TestParseLifetimeAnnotations/InterfaceMethodMutSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.InterfaceDecl{
        Name: &ast.Ident{
            Name: "Mutator",
            span: 10-17,
        },
        TypeAnn: &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.MethodTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "setItem",
                        span: 20-27,
                    },
                    Fn: &ast.FuncTypeAnn{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 28-30,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 45-46,
                                },
                                TypeAnn: &ast.MutableTypeAnn{
                                    Target: &ast.TypeRefTypeAnn{
                                        Name: &ast.Ident{
                                            Name: "Point",
                                            span: 55-60,
                                        },
                                        Lifetime: &ast.LifetimeAnn{
                                            Name: "a",
                                            span: 52-54,
                                        },
                                        span: 55-60,
                                    },
                                    span: 55-60,
                                },
                            },
                        },
                        Return: &ast.LitTypeAnn{
                            Lit: &ast.UndefinedLit{
                                span: 65-74,
                            },
                            span: 65-74,
                        },
                        span: 31-74,
                    },
                    Receiver: &ast.MethodReceiver{
                        Mut: true,
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 36-38,
                        },
                        Span_: 32-43,
                    },
                },
            },
            span: 18-76,
        },
        span: 0-76,
    },
    span: 0-76,
}
---

[TestParseLifetimeAnnotations/ClassMethodMutSelfLifetime - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Container",
            span: 6-15,
        },
        Body: []ast.ClassElem{
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name: "setItem",
                    span: 18-25,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: []*ast.LifetimeParam{
                            &ast.LifetimeParam{
                                Name: "a",
                                span: 26-28,
                            },
                        },
                        Params: []*ast.Param{
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name: "p",
                                    span: 43-44,
                                },
                                TypeAnn: &ast.MutableTypeAnn{
                                    Target: &ast.TypeRefTypeAnn{
                                        Name: &ast.Ident{
                                            Name: "Point",
                                            span: 53-58,
                                        },
                                        Lifetime: &ast.LifetimeAnn{
                                            Name: "a",
                                            span: 50-52,
                                        },
                                        span: 53-58,
                                    },
                                    span: 53-58,
                                },
                            },
                        },
                        Return: &ast.LitTypeAnn{
                            Lit: &ast.UndefinedLit{
                                span: 63-72,
                            },
                            span: 63-72,
                        },
                    },
                    Body: &ast.Block{
                        Span: 73-76,
                    },
                    span: 18-76,
                },
                Receiver: &ast.MethodReceiver{
                    Mut: true,
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 34-36,
                    },
                    Span_: 30-41,
                },
                Span_: 18-76,
            },
        },
        span: 0-78,
    },
    span: 0-78,
}
---

[TestParseLifetimeAnnotations/FnLifetimeParamMultiBound - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "pick",
            span: 3-7,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "b",
                            span: 12-14,
                        },
                        &ast.LifetimeAnn{
                            Name: "c",
                            span: 17-19,
                        },
                    },
                    span: 8-19,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    span: 21-23,
                },
                &ast.LifetimeParam{
                    Name: "c",
                    span: 25-27,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 29-30,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 39-44,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 36-38,
                            },
                            span: 39-44,
                        },
                        span: 39-44,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 56-61,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 53-55,
                    },
                    span: 56-61,
                },
                span: 56-61,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "a",
                        span: 71-72,
                    },
                    span: 64-72,
                },
            },
            Span: 62-74,
        },
        span: 0-74,
    },
    span: 0-74,
}
---

[TestParseLifetimeAnnotations/FnLifetimeParamSingleBound - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "pick",
            span: 3-7,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 8-10,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "a",
                            span: 16-18,
                        },
                    },
                    span: 12-18,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 20-21,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 30-35,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 27-29,
                            },
                            span: 30-35,
                        },
                        span: 30-35,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "b",
                        span: 37-38,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 47-52,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "b",
                                span: 44-46,
                            },
                            span: 47-52,
                        },
                        span: 47-52,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 64-69,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "b",
                        span: 61-63,
                    },
                    span: 64-69,
                },
                span: 64-69,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "b",
                        span: 79-80,
                    },
                    span: 72-80,
                },
            },
            Span: 70-82,
        },
        span: 0-82,
    },
    span: 0-82,
}
---

[TestParseLifetimeAnnotations/FnTypeAnnLifetimeParamBound - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "f",
            span: 4-5,
        },
        TypeAnn: &ast.FuncTypeAnn{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    span: 10-12,
                },
                &ast.LifetimeParam{
                    Name: "b",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "a",
                            span: 18-20,
                        },
                    },
                    span: 14-20,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "a",
                        span: 22-23,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 28-33,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: 25-27,
                        },
                        span: 28-33,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "b",
                        span: 35-36,
                    },
                    TypeAnn: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: 41-46,
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "b",
                            span: 38-40,
                        },
                        span: 41-46,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 54-59,
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "b",
                    span: 51-53,
                },
                span: 54-59,
            },
            span: 7-59,
        },
        Init: &ast.IdentExpr{
            Name: "pick",
            span: 62-66,
        },
        span: 0-66,
    },
    span: 0-66,
}
---

[TestParseLifetimeAnnotations/FnLifetimeParamStaticBound - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "keep",
            span: 3-7,
        },
        FuncSig: ast.FuncSig{
            LifetimeParams: []*ast.LifetimeParam{
                &ast.LifetimeParam{
                    Name: "a",
                    Bounds: []*ast.LifetimeAnn{
                        &ast.LifetimeAnn{
                            Name: "static",
                            span: 12-19,
                        },
                    },
                    span: 8-19,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "p",
                        span: 21-22,
                    },
                    TypeAnn: &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: 31-36,
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: 28-30,
                            },
                            span: 31-36,
                        },
                        span: 31-36,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 48-53,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 45-47,
                    },
                    span: 48-53,
                },
                span: 48-53,
            },
        },
        Body: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name: "p",
                        span: 63-64,
                    },
                    span: 56-64,
                },
            },
            Span: 54-66,
        },
        span: 0-66,
    },
    span: 0-66,
}
---

[TestParseLifetimeAnnotations/ParenLifetimePrefixTypeArg - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 4-5,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "View",
                span: 7-11,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 16-21,
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 13-15,
                    },
                    span: 16-21,
                },
            },
            span: 7-23,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 26-29,
        },
        span: 0-29,
    },
    span: 0-29,
}
---

[TestParseLifetimeAnnotations/ParenLifetimePrefixType - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Pattern: &ast.IdentPat{
            Name: "v",
            span: 4-5,
        },
        TypeAnn: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Point",
                span: 11-16,
            },
            Lifetime: &ast.LifetimeAnn{
                Name: "a",
                span: 8-10,
            },
            span: 11-16,
        },
        Init: &ast.IdentExpr{
            Name: "ref",
            span: 20-23,
        },
        span: 0-23,
    },
    span: 0-23,
}
---

[TestParseLifetimeAnnotations/TypeAliasWithLifetimeParamBound - 1]
&ast.DeclStmt{
    Decl: &ast.TypeDecl{
        Name: &ast.Ident{
            Name: "Pair",
            span: 5-9,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 10-12,
            },
            &ast.LifetimeParam{
                Name: "b",
                Bounds: []*ast.LifetimeAnn{
                    &ast.LifetimeAnn{
                        Name: "a",
                        span: 18-20,
                    },
                },
                span: 14-20,
            },
        },
        TypeParams: []*ast.TypeParam{
            &ast.TypeParam{
                Name: "T",
                span: 22-23,
            },
        },
        TypeAnn: &ast.TupleTypeAnn{
            Elems: []ast.TypeAnn{
                &ast.RefTypeAnn{
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: 29-31,
                    },
                    Inner: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 32-33,
                        },
                        span: 32-33,
                    },
                    span: 28-33,
                },
                &ast.RefTypeAnn{
                    Lifetime: &ast.LifetimeAnn{
                        Name: "b",
                        span: 36-38,
                    },
                    Inner: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 39-40,
                        },
                        span: 39-40,
                    },
                    span: 35-40,
                },
            },
            span: 27-41,
        },
        span: 0-41,
    },
    span: 0-41,
}
---

[TestParseLifetimeAnnotations/TypeAliasWithLifetimeAndTypeParams - 1]
&ast.DeclStmt{
    Decl: &ast.TypeDecl{
        Name: &ast.Ident{
            Name: "Ref",
            span: 5-8,
        },
        LifetimeParams: []*ast.LifetimeParam{
            &ast.LifetimeParam{
                Name: "a",
                span: 9-11,
            },
        },
        TypeParams: []*ast.TypeParam{
            &ast.TypeParam{
                Name: "T",
                span: 13-14,
            },
        },
        TypeAnn: &ast.RefTypeAnn{
            Lifetime: &ast.LifetimeAnn{
                Name: "a",
                span: 19-21,
            },
            Inner: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 22-23,
                },
                span: 22-23,
            },
            span: 18-23,
        },
        span: 0-23,
    },
    span: 0-23,
}
---
